@@ -1,3 +1,9 @@
+2018-07-29  John David Anglin  <danglin@gcc.gnu.org>
+
+	* config/pa/pa.c (pa_output_addr_vec): Align address table.
+	* config/pa/pa.h (JUMP_TABLES_IN_TEXT_SECTION): Revise comment.
+	* config/pa/pa32-linux.h (JUMP_TABLES_IN_TEXT_SECTION): Define.
+
 2018-07-17  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>
 
 	Backport from mainline
